--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,53 @@
 <body>
     <h1>Lasagna</h1>
     <img src="../images/lazanja.jpg">
-    <p></p>
-    
+    <h2>Description</h2>
+    <p>Lasagna is the ultimate Italian comfort food and it’s the perfect make-ahead meal to enjoy on busy weekdays or even laid back weekends. Tender pasta noodles are layered with a delicious meat sauce, creamy ricotta, and mozzarella.</p>
+    <p>It takes about 45 minutes to bake the lasagna at 375ºF (190ºC). Loosely cover the dish with aluminum foil. To ensure that the mozzarella cheese layers are fully melted and the surface gets slightly golden brown in color, remove the foil and bake for 15 minutes.</p>
+    <h2>Ingredients</h2>
+    <h3>Meat sauce</h3>
+    <ul>
+        <li>2tbs olive oil</li>
+        <li>1/2 cup yellow onion, finely chopped</li>
+        <li>1 tablespoon minced garlic</li>
+        <li>1 teaspoon dried Italian seasoning</li>
+        <li>1 pound ground beef, 90% lean</li>
+        <li>6 ounces Italian sausage, fresh, casing removed, mild or spicy</li>
+        <li>1 ½ teaspoon kosher salt</li>
+        <li>½ teaspoon black pepper</li>
+        <li>6 ounces tomato paste</li>
+        <li>56 ounces crushed tomatoes</li>
+    </ul>
+    <h3>Lasagna</h3>
+    <ul>
+        <li>4 quarts water</li>
+        <li>1 tablespoon kosher salt, for pasta water</li>
+        <li>1 pound lasagna noodles</li>
+        <li>2 large eggs, lightly whisked</li>
+        <li>32 ounces whole milk ricotta cheese</li>
+        <li>½ cup grated parmesan cheese</li>
+        <li>2 tablespoons chopped Italian parsley</li>
+        <li>½ teaspoon kosher salt</li>
+        <li>¼ teaspoon black pepper</li>
+        <li>pound mozzarella cheese, freshly shredded</li>
+    </ul>
+<h2>Steps for meat sauce</h2>
+    <ol>
+        <li>Set the oven rack to the middle position. Preheat the oven to 375°F (190ºC).</li>
+        <li>In a large pan heat olive oil over medium-low heat and sauté onion and garlic until onions are translucent about 3 minutes.</li>
+        <li>Turn heat to medium-high, add beef and sausage to the pan. Break the meat up into smaller pieces and cook until no traces of pink remain, about 5 minutes. Season meat with 1 ½ teaspoon salt and ½ teaspoon black pepper.</li>
+        <li>Add tomato paste and stir until combined, cook for 1 minutes. Stir in crushed tomatoes and simmer over medium-low heat, stirring occasionally for 30 minutes. Taste and season with more salt and pepper as desired.</li>     
+    </ol>
+<h2>Steps for lasagna</h2>
+    <ol>
+        <li>Bring water and 1 tablespoon salt to a boil. Cook pasta according to package directions, stirring occasionally to prevent sticking, until al dente, about 8 minutes. Carefully remove the lasagna noodles and transfer them to a sheet pan lined with clean kitchen towels. Place them in a single layer, to keep them from sticking together. Set aside until ready to use.</li>
+        <li>In a medium-sized bowl whisk together eggs, ricotta cheese, parmesan cheese, ½ teaspoon salt, ¼ teaspoon pepper, and chopped parsley.</li>
+        <li>Reserve about 1 cup of meat sauce and 1 cup of grated mozzarella cheese for topping the lasagna. Lightly coat a 13-inch by 9-inch baking dish with oil. Add just enough sauce to lightly cover the bottom of the dish to prevent sticking.</li>
+        <li>Layer 3 to 4 sheets of lasagna, top with ⅓ of ricotta cheese mixture, ⅓ meat sauce, and ⅓ of the mozzarella cheese. Repeat for 2 more layers. On the top layer pour the reserved meat sauce and cover evenly with the reserved mozzarella cheese.</li>
+        <li>Line a sheet tray with foil and place the lasagna tray on top. Loosely cover with foil, making sure not to touch the top with the cheese. Bake for 30 minutes, then remove the foil. Bake until the cheese is hot and bubbly on top, about 15 minutes.  The lasagna can be brolied for a few minutes right before removing from the oven for an extra browned crust. </li>
+        <li>Before slicing, allow the lasagna to rest for 15 minutes. </li>
+    </ol>
+
+
 </body>
 </html>
