Finish lasagna page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/lazanja.jpg">
+    <img src="../images/lazanja.jpg" width="500" height="500">
     <h2>Description</h2>
     <p>Lasagna is the ultimate Italian comfort food and it’s the perfect make-ahead meal to enjoy on busy weekdays or even laid back weekends. Tender pasta noodles are layered with a delicious meat sauce, creamy ricotta, and mozzarella.</p>
     <p>It takes about 45 minutes to bake the lasagna at 375ºF (190ºC). Loosely cover the dish with aluminum foil. To ensure that the mozzarella cheese layers are fully melted and the surface gets slightly golden brown in color, remove the foil and bake for 15 minutes.</p>
@@ -51,7 +51,7 @@
         <li>Reserve about 1 cup of meat sauce and 1 cup of grated mozzarella cheese for topping the lasagna. Lightly coat a 13-inch by 9-inch baking dish with oil. Add just enough sauce to lightly cover the bottom of the dish to prevent sticking.</li>
         <li>Layer 3 to 4 sheets of lasagna, top with ⅓ of ricotta cheese mixture, ⅓ meat sauce, and ⅓ of the mozzarella cheese. Repeat for 2 more layers. On the top layer pour the reserved meat sauce and cover evenly with the reserved mozzarella cheese.</li>
         <li>Line a sheet tray with foil and place the lasagna tray on top. Loosely cover with foil, making sure not to touch the top with the cheese. Bake for 30 minutes, then remove the foil. Bake until the cheese is hot and bubbly on top, about 15 minutes.  The lasagna can be brolied for a few minutes right before removing from the oven for an extra browned crust. </li>
-        <li>Before slicing, allow the lasagna to rest for 15 minutes. </li>
+        <li>Before slicing, allow the lasagna to rest for 15 minutes.</li>
     </ol>
 
 
