Two new pages added with all information

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html">Lasagna</a>
+    <a href="./recipes/easy-buttered-chicken.html">Easy buttered chicken</a>
+    <a href="./recipes/baked mac-n-cheese.html">Baked mac 'n' cheese</a>
     
 </body>
 </html>
