--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,8 +8,8 @@
     <h1>Lasagna</h1>
     <img src="../images/lazanja.jpg" width="500" height="500">
     <h2>Description</h2>
-    <p>Lasagna is the ultimate Italian comfort food and it’s the perfect make-ahead meal to enjoy on busy weekdays or even laid back weekends. Tender pasta noodles are layered with a delicious meat sauce, creamy ricotta, and mozzarella.</p>
-    <p>It takes about 45 minutes to bake the lasagna at 375ºF (190ºC). Loosely cover the dish with aluminum foil. To ensure that the mozzarella cheese layers are fully melted and the surface gets slightly golden brown in color, remove the foil and bake for 15 minutes.</p>
+    <p><strong>Is the ultimate Italian comfort food and it’s the perfect make-ahead meal to enjoy on busy weekdays or even laid back weekends. Tender pasta noodles are layered with a delicious meat sauce, creamy ricotta, and mozzarella.</strong></p>
+    <p><strong>It takes about 45 minutes to bake the lasagna at 375ºF (190ºC). Loosely cover the dish with aluminum foil. To ensure that the mozzarella cheese layers are fully melted and the surface gets slightly golden brown in color, remove the foil and bake for 15 minutes.</strong></p>
     <h2>Ingredients</h2>
     <h3>Meat sauce</h3>
     <ul>
