--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/easy-buttered-chicken.html">Easy buttered chicken</a>
-    <a href="./recipes/baked mac-n-cheese.html">Baked mac 'n' cheese</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/easy-buttered-chicken.html">Easy buttered chicken</a></li>
+        <li><a href="./recipes/baked mac-n-cheese.html">Baked mac 'n' cheese</a></li>
+</ul>
     
 </body>
 </html>
