--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="Stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>The Recipes</title>
 </head>
 <body>
+    
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+    <ul class="list">
+        <li id="lasagna"><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/easy-buttered-chicken.html">Easy buttered chicken</a></li>
         <li><a href="./recipes/baked mac-n-cheese.html">Baked mac 'n' cheese</a></li>
 </ul>
