--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="Stylesheet" href="../style.css">
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1 class="title-italy">Lasagna</h1>
     <img src="../images/lazanja.jpg" width="500" height="500">
-    <h2>Description</h2>
-    <p><strong>Is the ultimate Italian comfort food and it’s the perfect make-ahead meal to enjoy on busy weekdays or even laid back weekends. Tender pasta noodles are layered with a delicious meat sauce, creamy ricotta, and mozzarella.</strong></p>
-    <p><strong>It takes about 45 minutes to bake the lasagna at 375ºF (190ºC). Loosely cover the dish with aluminum foil. To ensure that the mozzarella cheese layers are fully melted and the surface gets slightly golden brown in color, remove the foil and bake for 15 minutes.</strong></p>
-    <h2>Ingredients</h2>
-    <h3>Meat sauce</h3>
+    <h2 class="subtitle-italy"><span>Description</span></h2>
+    <div class="border-1 text-bold">
+    <p>Is the ultimate Italian comfort food and it’s the perfect make-ahead meal to enjoy on busy weekdays or even laid back weekends. Tender pasta noodles are layered with a delicious meat sauce, creamy ricotta, and mozzarella.</strong></p>
+    <p>It takes about 45 minutes to bake the lasagna.</strong></p>
+    </div>
+    <h2 class="subtitle-italy"><span>Ingredients</span></h2>
+    <div class="border-1">
+    <h3 class="red-background"><span>Meat sauce</span></h3>
     <ul>
         <li>2tbs olive oil</li>
         <li>1/2 cup yellow onion, finely chopped</li>
@@ -24,7 +28,7 @@
         <li>6 ounces tomato paste</li>
         <li>56 ounces crushed tomatoes</li>
     </ul>
-    <h3>Lasagna</h3>
+    <h3 class="green-background"><span>Lasagna</span></h3>
     <ul>
         <li>4 quarts water</li>
         <li>1 tablespoon kosher salt, for pasta water</li>
@@ -37,14 +41,18 @@
         <li>¼ teaspoon black pepper</li>
         <li>pound mozzarella cheese, freshly shredded</li>
     </ul>
-<h2>Steps for meat sauce</h2>
+</div>
+<h2 class="subtitle-italy"><span>Steps for meat sauce</span></h2>
+<div class="border-1">
     <ol>
         <li>Set the oven rack to the middle position. Preheat the oven to 375°F (190ºC).</li>
         <li>In a large pan heat olive oil over medium-low heat and sauté onion and garlic until onions are translucent about 3 minutes.</li>
         <li>Turn heat to medium-high, add beef and sausage to the pan. Break the meat up into smaller pieces and cook until no traces of pink remain, about 5 minutes. Season meat with 1 ½ teaspoon salt and ½ teaspoon black pepper.</li>
         <li>Add tomato paste and stir until combined, cook for 1 minutes. Stir in crushed tomatoes and simmer over medium-low heat, stirring occasionally for 30 minutes. Taste and season with more salt and pepper as desired.</li>     
     </ol>
-<h2>Steps for lasagna</h2>
+</div>
+<h2 class="subtitle-italy"><span>Steps for lasagna</span></h2>
+<div class="border-1">
     <ol>
         <li>Bring water and 1 tablespoon salt to a boil. Cook pasta according to package directions, stirring occasionally to prevent sticking, until al dente, about 8 minutes. Carefully remove the lasagna noodles and transfer them to a sheet pan lined with clean kitchen towels. Place them in a single layer, to keep them from sticking together. Set aside until ready to use.</li>
         <li>In a medium-sized bowl whisk together eggs, ricotta cheese, parmesan cheese, ½ teaspoon salt, ¼ teaspoon pepper, and chopped parsley.</li>
@@ -53,6 +61,7 @@
         <li>Line a sheet tray with foil and place the lasagna tray on top. Loosely cover with foil, making sure not to touch the top with the cheese. Bake for 30 minutes, then remove the foil. Bake until the cheese is hot and bubbly on top, about 15 minutes.  The lasagna can be brolied for a few minutes right before removing from the oven for an extra browned crust. </li>
         <li>Before slicing, allow the lasagna to rest for 15 minutes.</li>
     </ol>
+</div>
 
 
 </body>
