--- a/recipes/easy-buttered-chicken.html
+++ b/recipes/easy-buttered-chicken.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="Stylesheet" href="../style.css">
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Easy buttered chicken</title>
 </head>
 <body>
-    <h1>Easy buttered chicken</h1>
+    <h1 class="title-india">Easy buttered chicken</h1>
     <img src="../images/Butter-Chicken-16.jpg" width="500" height="700">
-    <h2>Description</h2>
-    <p><strong>a healthy version of your favourite Friday night curry? Try our easy butter chicken. The meat can be marinaded the day before so you can get ahead on your prep</strong></p>
-    <h2>Ingredients</h2>
+    <h2 class="subtitle-india"><span>Description</span></h2>
+    <div class="border-1 text-bold">
+    <p>A healthy version of your favourite Friday night curry? Try our easy butter chicken. The meat can be marinaded the day before so you can get ahead on your prep.</p>
+    </div>
+    <h2 class="subtitle-india"><span>Ingredients</span></h2>
+    <div class="border-1">
     <p>500g skinless boneless chicken thighs</p>
-    <h3>For the marinade</h3>
+    <h3 class="orange-background"><span>For the marinade</span></h3>
         <ul>
             <li>1 lemon, juiced</li>
             <li>2 tsp ground cumin</li>
@@ -19,7 +23,7 @@
             <li>1-2 tsp hot chilli powder</li>
             <li>200g natural yogurt</li>
         </ul>
-    <h3>For the curry</h3>
+    <h3 class="green-background"><span>For the curry</span></h3>
         <ul>
             <li>2 tbsp vegetable oil</li>
             <li>1 large onion, chopped</li>
@@ -32,11 +36,14 @@
             <li>300ml chicken stock</li>
             <li>50g flaked almonds, toasted</li>
         </ul>
-    <h2>Steps</h2>
+    </div>
+    <h2 class="subtitle-india"><span>Steps for chicken</span></h2>
+    <div class="border-1">
         <ol>
             <li>In a medium bowl, mix all the marinade ingredients with some seasoning. Chop the chicken into bite-sized pieces and toss with the marinade. Cover and chill in the fridge for 1 hr or overnight.</li>
             <li>In a large, heavy saucepan, heat the oil. Add the onion, garlic, green chilli, ginger and some seasoning. Fry on a medium heat for 10 mins or until soft.</li>
             <li>Add the spices with the tomato purée, cook for a further 2 mins until fragrant, then add the stock and marinated chicken. Cook for 15 mins, then add any remaining marinade left in the bowl. Simmer for 5 mins, then sprinkle with the toasted almonds. Serve with rice, naan bread, chutney, coriander and lime wedges, if you like.</li>
         </ol>
+    </div>
 </body>
 </html>
